# tee

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: EnforceOutOfSourceBuilds.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt  main.c  tee.c  tee.h
test/: CMakeLists.txt  main.c  main.test.c
